k8s.test/fastapi-deployment-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-test
  namespace: test
spec:
  replicas: 1  # Test ortamında düşük replikalar
  selector:
    matchLabels:
      app: fastapi-test
  template:
    metadata:
      labels:
        app: fastapi-test
    spec:
      containers:
        - name: fastapi
          image: hanoguz00/fastapi-app:test  # Test ortamı için test tag'li imaj
          ports:
            - containerPort: 8000
