k8s.test/fastapi-service-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: test
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: fastapi
