k8s.test/postgres-service-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: test
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
